@@ -39,6 +39,7 @@ Version 1.0.4 to be released
 - New: Added beforeControllerAction and afterControllerAction to CWebApplication and CWebModule (Qiang)
 - New: Added 'checkAll' option to CHtml::checkBoxList and CHtml::activeCheckBoxList (Qiang)
 - New: Added CHtml::encodeArray() (Qiang)
+- New: Added case-sensitivity parameter to CDbCommandBuilder::createSearchCondition (Qiang)
 
 
 Version 1.0.3 March 1, 2009
